--- a/pset5/PSET 5 Exploratory Data Analysis.ipynb
+++ b/pset5/PSET 5 Exploratory Data Analysis.ipynb
@@ -104,46 +104,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "2abb771b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code goes here. Be sure to import packages needed!\n",
+    "import pandas as pd\n",
+    "\n",
+    "#load datasets\n",
+    "df_cpu = pd.read_csv(\"cpu.csv\")\n",
+    "df_disk = pd.read_csv(\"disk.csv\")\n",
+    "df_memory = pd.read_csv(\"memory.csv\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0b822932-5984-456c-a944-5ab01338cb5f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 306 entries, 0 to 305\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   Image        306 non-null    object \n",
+      " 1   PID          306 non-null    object \n",
+      " 2   Description  290 non-null    object \n",
+      " 3   Status       306 non-null    object \n",
+      " 4   Threads      306 non-null    object \n",
+      " 5   CPU          306 non-null    int64  \n",
+      " 6   Average CPU  306 non-null    float64\n",
+      "dtypes: float64(1), int64(1), object(5)\n",
+      "memory usage: 16.9+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((306, 7), None)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cpu.shape, df_cpu.info()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fa75e715-b3d1-4fdf-b8f9-d67d2eae2c06",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14 entries, 0 to 13\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                 Non-Null Count  Dtype \n",
+      "---  ------                 --------------  ----- \n",
+      " 0   Image                  14 non-null     object\n",
+      " 1   PID                    14 non-null     int64 \n",
+      " 2   Model                  14 non-null     object\n",
+      " 3   Read Byte Per Second   14 non-null     object\n",
+      " 4   Write Byte Per Second  14 non-null     object\n",
+      " 5   Delay                  14 non-null     int64 \n",
+      " 6   Total Byte Per Second  14 non-null     object\n",
+      "dtypes: int64(2), object(5)\n",
+      "memory usage: 916.0+ bytes\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((14, 7), None)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_disk.shape, df_disk.info(), "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "020c0dee-133a-470e-a204-2ad5dd5b467d",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ca358fe-8c77-4745-b4c0-832f5721c7ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 306 entries, 0 to 305\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   Image            306 non-null    object\n",
+      " 1   PID              306 non-null    int64 \n",
+      " 2   Hard Faults/sec  306 non-null    int64 \n",
+      " 3   Commit KB        306 non-null    object\n",
+      " 4   Working Set KB   306 non-null    object\n",
+      " 5   Shareable KB     306 non-null    object\n",
+      " 6   Private KB       306 non-null    object\n",
+      "dtypes: int64(2), object(5)\n",
+      "memory usage: 16.9+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((306, 7), None)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df_memory.shape, df_memory.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,38 +271,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "8f3b5beb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code\n",
-    "\n"
+    "def CleanColumnHeading(dfx):\n",
+    "    dfx.columns = dfx.columns.str.strip().str.lower().str.replace(' ', '_')\n",
+    "    return dfx\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "d0392dea-7102-4a1e-baf7-afa87d823ef7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_cpu = CleanColumnHeading(df_cpu)\n",
+    "df_disk = CleanColumnHeading(df_disk)\n",
+    "df_memory = CleanColumnHeading(df_memory)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "8db8ed38-5f06-4364-a146-825c01ea270e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 306 entries, 0 to 305\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   image        306 non-null    object \n",
+      " 1   pid          306 non-null    object \n",
+      " 2   description  290 non-null    object \n",
+      " 3   status       306 non-null    object \n",
+      " 4   threads      306 non-null    object \n",
+      " 5   cpu          306 non-null    int64  \n",
+      " 6   average_cpu  306 non-null    float64\n",
+      "dtypes: float64(1), int64(1), object(5)\n",
+      "memory usage: 16.9+ KB\n",
+      "            image    pid  description     status threads  cpu  average_cpu\n",
+      "0   Secure System    140          NaN  Suspended       -    0          0.0\n",
+      "1  SearchHost.exe   9272   SearchHost  Suspended      68    0          0.0\n",
+      "2     LockApp.exe  12784  LockApp.exe  Suspended      16    0          0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_cpu.info()\n",
+    "print(df_cpu.head(3))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ddd238f0-8152-4731-a8ba-503f5c59b21d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14 entries, 0 to 13\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                 Non-Null Count  Dtype \n",
+      "---  ------                 --------------  ----- \n",
+      " 0   image                  14 non-null     object\n",
+      " 1   pid                    14 non-null     int64 \n",
+      " 2   model                  14 non-null     object\n",
+      " 3   read_byte_per_second   14 non-null     object\n",
+      " 4   write_byte_per_second  14 non-null     object\n",
+      " 5   delay                  14 non-null     int64 \n",
+      " 6   total_byte_per_second  14 non-null     object\n",
+      "dtypes: int64(2), object(5)\n",
+      "memory usage: 916.0+ bytes\n",
+      "        image    pid model read_byte_per_second write_byte_per_second  delay  \\\n",
+      "0  chrome.exe   5448     x                    0                 6,278      0   \n",
+      "1  chrome.exe  13324    x3                    0                 4,940      0   \n",
+      "2   EXCEL.EXE  12132    x1               71,807                     0      0   \n",
+      "\n",
+      "  total_byte_per_second  \n",
+      "0                 6,278  \n",
+      "1                 4,940  \n",
+      "2                71,807  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df_disk.info()\n",
+    "print(df_disk.head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8abdc19b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 306 entries, 0 to 305\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   image            306 non-null    object\n",
+      " 1   pid              306 non-null    int64 \n",
+      " 2   hard_faults/sec  306 non-null    int64 \n",
+      " 3   commit_kb        306 non-null    object\n",
+      " 4   working_set_kb   306 non-null    object\n",
+      " 5   shareable_kb     306 non-null    object\n",
+      " 6   private_kb       306 non-null    object\n",
+      "dtypes: int64(2), object(5)\n",
+      "memory usage: 16.9+ KB\n",
+      "                           image    pid  hard_faults/sec commit_kb  \\\n",
+      "0  AcrobatNotificationClient.exe  18096                0    40,272   \n",
+      "1      Adobe Crash Processor.exe   7856                0     4,768   \n",
+      "2      Adobe Desktop Service.exe   6640                0    85,284   \n",
+      "\n",
+      "  working_set_kb shareable_kb private_kb  \n",
+      "0          3,632        3,392        240  \n",
+      "1         15,252       13,704      1,548  \n",
+      "2         85,504       75,696      9,808  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df_memory.info()\n",
+    "print(df_memory.head(3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +431,9 @@
    "id": "61a1a8e5-9532-4624-a143-2ff579b99909",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def clean_numeric_column(dfx, column_name):"
+   ]
   },
   {
    "cell_type": "code",
@@ -235,7 +441,18 @@
    "id": "4984e73b-cc46-4a35-80a6-2505f28f2e89",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#remove commas and convert to numeric\n",
+    "    dfx[column_name] = pd.to_numeric(dfx[column_name].astype(str).str.replace(',', ''), errors='coerce')\n",
+    "\n",
+    "    #drop rows with NaN\n",
+    "    dfx.dropna(subset=[column_name], inplace=True)\n",
+    "    #convert to integer type if possible\n",
+    "    if dfx[column_name].dtype == 'float64' and (dfx[column_name] % 1 == 0).all():\n",
+    "        dfx[column_name] = dfx[column_name].astype(int)\n",
+    "\n",
+    "    return dfx"
+   ]
   },
   {
    "cell_type": "code",
@@ -546,7 +763,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -560,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
