--- a/pset5/PSET 5 Exploratory Data Analysis.ipynb
+++ b/pset5/PSET 5 Exploratory Data Analysis.ipynb
@@ -446,6 +446,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "4c7d2c39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df_cpu columns: Index(['image', 'pid', 'description', 'status', 'threads', 'cpu',\n",
+      "       'average_cpu'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"df_cpu columns:\", df_cpu.columns)\n",
+    "#print(\"df_cpu_cleaned columns:\", df_cpu_cleaned.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "id": "50664004-97f4-4f5e-b47b-b4c1d75cc875",
    "metadata": {},
@@ -461,27 +482,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "8418df3f-bd4c-4179-ae8b-3b705164902a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 304 entries, 1 to 305\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   image        304 non-null    object \n",
+      " 1   pid          304 non-null    object \n",
+      " 2   description  289 non-null    object \n",
+      " 3   status       304 non-null    object \n",
+      " 4   threads      304 non-null    int64  \n",
+      " 5   cpu          304 non-null    int64  \n",
+      " 6   average_cpu  304 non-null    float64\n",
+      "dtypes: float64(1), int64(2), object(4)\n",
+      "memory usage: 19.0+ KB\n",
+      "                           image    pid                description     status  \\\n",
+      "1                 SearchHost.exe   9272                 SearchHost  Suspended   \n",
+      "2                    LockApp.exe  12784                LockApp.exe  Suspended   \n",
+      "3  AcrobatNotificationClient.exe  18096  AcrobatNotificationClient  Suspended   \n",
+      "\n",
+      "   threads  cpu  average_cpu  \n",
+      "1       68    0          0.0  \n",
+      "2       16    0          0.0  \n",
+      "3       13    0          0.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df_cpu_cleaned.info()\n",
+    "print(df_cpu_cleaned.head(3))\n",
+    "column_to_check = 'threads'\n",
+    "df_cpu_comparison = df_cpu.merge(df_cpu_cleaned, on=\"pid\", suffixes=(\"_before\", \"_after\"))\n",
+    "differences = df_cpu_comparison[df_cpu_comparison[f\"{column_to_check}_before\"] != df_cpu_comparison[f\"{column_to_check}_after\"]]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
+   "id": "ce3c0c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    threads_before  threads_after\n",
+      "0               68             68\n",
+      "1               16             16\n",
+      "2               13             13\n",
+      "3               12             12\n",
+      "4               18             18\n",
+      "..             ...            ...\n",
+      "299              7              7\n",
+      "300              3              3\n",
+      "301             13             13\n",
+      "302              6              6\n",
+      "303             17             17\n",
+      "\n",
+      "[304 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(differences[[f\"{column_to_check}_before\", f\"{column_to_check}_after\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "6e988c47-5362-4b97-8ae3-eb77936239c0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 306 entries, 0 to 305\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   image            306 non-null    object\n",
+      " 1   pid              306 non-null    int64 \n",
+      " 2   hard_faults/sec  306 non-null    int64 \n",
+      " 3   commit_kb        306 non-null    object\n",
+      " 4   working_set_kb   306 non-null    int64 \n",
+      " 5   shareable_kb     306 non-null    object\n",
+      " 6   private_kb       306 non-null    object\n",
+      "dtypes: int64(3), object(4)\n",
+      "memory usage: 16.9+ KB\n",
+      "                           image    pid  hard_faults/sec commit_kb  \\\n",
+      "0  AcrobatNotificationClient.exe  18096                0    40,272   \n",
+      "1      Adobe Crash Processor.exe   7856                0     4,768   \n",
+      "2      Adobe Desktop Service.exe   6640                0    85,284   \n",
+      "\n",
+      "   working_set_kb shareable_kb private_kb  \n",
+      "0            3632        3,392        240  \n",
+      "1           15252       13,704      1,548  \n",
+      "2           85504       75,696      9,808  \n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'total_byte_per_second_before'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'total_byte_per_second_before'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[55], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m column_to_check \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtotal_byte_per_second\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      4\u001b[0m df_memory_comparison \u001b[38;5;241m=\u001b[39m df_memory\u001b[38;5;241m.\u001b[39mmerge(df_memory_cleaned, on\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpid\u001b[39m\u001b[38;5;124m\"\u001b[39m, suffixes\u001b[38;5;241m=\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_before\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_after\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m----> 5\u001b[0m differences \u001b[38;5;241m=\u001b[39m df_memory_comparison[df_memory_comparison[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolumn_to_check\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_before\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m!=\u001b[39m df_memory_comparison[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolumn_to_check\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_after\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'total_byte_per_second_before'"
+     ]
+    }
+   ],
+   "source": [
+    "df_memory_cleaned.info()\n",
+    "print(df_memory_cleaned.head(3))\n",
+    "column_to_check = 'total_byte_per_second'\n",
+    "df_memory_comparison = df_memory.merge(df_memory_cleaned, on=\"pid\", suffixes=(\"_before\", \"_after\"))\n",
+    "differences = df_memory_comparison[df_memory_comparison[f\"{column_to_check}_before\"] != df_memory_comparison[f\"{column_to_check}_after\"]]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "fb2dfeac-b063-42c6-aa4f-8b610f8a9059",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14 entries, 0 to 13\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                 Non-Null Count  Dtype \n",
+      "---  ------                 --------------  ----- \n",
+      " 0   image                  14 non-null     object\n",
+      " 1   pid                    14 non-null     int64 \n",
+      " 2   model                  14 non-null     object\n",
+      " 3   read_byte_per_second   14 non-null     object\n",
+      " 4   write_byte_per_second  14 non-null     object\n",
+      " 5   delay                  14 non-null     int64 \n",
+      " 6   total_byte_per_second  14 non-null     int64 \n",
+      "dtypes: int64(3), object(4)\n",
+      "memory usage: 916.0+ bytes\n",
+      "        image    pid model read_byte_per_second write_byte_per_second  delay  \\\n",
+      "0  chrome.exe   5448     x                    0                 6,278      0   \n",
+      "1  chrome.exe  13324    x3                    0                 4,940      0   \n",
+      "2   EXCEL.EXE  12132    x1               71,807                     0      0   \n",
+      "\n",
+      "   total_byte_per_second  \n",
+      "0                   6278  \n",
+      "1                   4940  \n",
+      "2                  71807  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df_disk_cleaned.info()\n",
+    "print(df_disk_cleaned.head(3))"
+   ]
   },
   {
    "cell_type": "code",
